--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -127,6 +127,12 @@
       "value": "Sign in"
     }
   ],
+  "LPU/Zd": [
+    {
+      "type": 0,
+      "value": "No tasks available."
+    }
+  ],
   "Lgsy+X": [
     {
       "type": 0,
