--- a/src/locales/sv.json
+++ b/src/locales/sv.json
@@ -127,6 +127,12 @@
       "value": "Logga in"
     }
   ],
+  "LPU/Zd": [
+    {
+      "type": 0,
+      "value": "Inga uppgifter tillgängliga."
+    }
+  ],
   "Lgsy+X": [
     {
       "type": 0,
